--- a/ROM_Sensor.uvprojx
+++ b/ROM_Sensor.uvprojx
@@ -258,17 +258,17 @@
                 <Size>0x0</Size>
               </XRAM>
               <OCR_RVCT1>
-                <Type>0</Type>
+                <Type>1</Type>
                 <StartAddress>0x0</StartAddress>
                 <Size>0x0</Size>
               </OCR_RVCT1>
               <OCR_RVCT2>
-                <Type>0</Type>
+                <Type>1</Type>
                 <StartAddress>0x0</StartAddress>
                 <Size>0x0</Size>
               </OCR_RVCT2>
               <OCR_RVCT3>
-                <Type>0</Type>
+                <Type>1</Type>
                 <StartAddress>0x0</StartAddress>
                 <Size>0x0</Size>
               </OCR_RVCT3>
@@ -278,7 +278,7 @@
                 <Size>0x40000</Size>
               </OCR_RVCT4>
               <OCR_RVCT5>
-                <Type>0</Type>
+                <Type>1</Type>
                 <StartAddress>0x0</StartAddress>
                 <Size>0x0</Size>
               </OCR_RVCT5>
@@ -401,6 +401,66 @@
               <FileName>HAL_GPIO.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\HAL_GPIO.h</FilePath>
+            </File>
+            <File>
+              <FileName>HAL_SYSCFG.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\HAL_SYSCFG.c</FilePath>
+            </File>
+            <File>
+              <FileName>HAL_SYSCFG.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\HAL_SYSCFG.h</FilePath>
+            </File>
+            <File>
+              <FileName>HAL_EXTI.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\HAL_EXTI.h</FilePath>
+            </File>
+            <File>
+              <FileName>RegisterMaskConstructors.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\RegisterMaskConstructors.h</FilePath>
+            </File>
+            <File>
+              <FileName>HAL_EXTI.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\HAL_EXTI.c</FilePath>
+            </File>
+            <File>
+              <FileName>RegisterMaskConstructors.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\RegisterMaskConstructors.c</FilePath>
+            </File>
+            <File>
+              <FileName>ClockControl.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\ClockControl.c</FilePath>
+            </File>
+            <File>
+              <FileName>ClockControl.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\ClockControl.h</FilePath>
+            </File>
+            <File>
+              <FileName>PLL.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\PLL.c</FilePath>
+            </File>
+            <File>
+              <FileName>PLL.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\PLL.h</FilePath>
+            </File>
+            <File>
+              <FileName>FlashFunctions.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\FlashFunctions.c</FilePath>
+            </File>
+            <File>
+              <FileName>FlashFunctions.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\FlashFunctions.h</FilePath>
             </File>
           </Files>
         </Group>
