Finished Custom_USART and Custom_DMA
Both libraries abstract control of peripherals.  They are working in
conjunction with eachother on UART_2. The current Main.c is setup to
transmit a string of characters on UART_2 via DMA.  It also reads
incoming data into a char via DMA.  This can be observed via the
watch variable window.

USART has support for enabling interupts.

DMA MEM2MEM and PER2PER modes are untested and need minor
implementation.

--- a/ROM_Sensor.uvprojx
+++ b/ROM_Sensor.uvprojx
@@ -138,7 +138,7 @@
           </Flash1>
           <bUseTDR>1</bUseTDR>
           <Flash2>BIN\UL2CM3.DLL</Flash2>
-          <Flash3>"" ()</Flash3>
+          <Flash3></Flash3>
           <Flash4></Flash4>
           <pFcarmOut></pFcarmOut>
           <pFcarmGrp></pFcarmGrp>
@@ -451,6 +451,26 @@
               <FileName>FlashFunctions.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\FlashFunctions.h</FilePath>
+            </File>
+            <File>
+              <FileName>Custom_USART.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Custom_USART.c</FilePath>
+            </File>
+            <File>
+              <FileName>Custom_USART.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Custom_USART.h</FilePath>
+            </File>
+            <File>
+              <FileName>Custom_DMA.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Custom_DMA.h</FilePath>
+            </File>
+            <File>
+              <FileName>Custom_DMA.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Custom_DMA.c</FilePath>
             </File>
           </Files>
         </Group>
